--- a/templates/shop/shop.html.twig
+++ b/templates/shop/shop.html.twig
@@ -47,12 +47,19 @@
                     </div>
                 {% endif %}
             {% else %}
-            
+            <div class="card mx-auto">
+                <div class="card-body">
+                    <h5 class="card-title">Pas de produit disponible pour cette catégorie !</h5>
+                    <div class="d-flex justify-content-between">
+                    <a href="" class="btn hov">Retournez dans la boutique</a>
+                    </div>
+                </div>
+            </div>
             {% endfor %}
 
 
         </div>        
-        <a href="?top" class="btn hova">Remontez en haut</a>
+        <a href="?top" class="btn btn-sm hova">Remontez en haut</a>
     </div>
 
 
